# src/app/shared/models/seance.model.ts
@@ -1,0 +1,4 @@
+export interface Seance {
+  id?: number;
+  heureDebut: string;
+}
